--- a/HitGuard/HitGuard/HitGuard.vcxproj
+++ b/HitGuard/HitGuard/HitGuard.vcxproj
@@ -105,6 +105,7 @@
     <ClInclude Include="HitGuardDlg.h" />
     <ClInclude Include="Protect.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="shell.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
